testsuite/tests/grammar/invalid_lexers/spacing_1.lkt
@spacing()
lexer foo_lexer {
}
